[翻譯] Sanctum 2 的英文新聞

--- a/sanctum2.news/index.html
+++ b/sanctum2.news/index.html
@@ -1,15 +1,14 @@
 ﻿<newsid>
 v1
-<version> v1.1.25536<news><b>Open Linux Beta</b>
-<a href='event:bit.ly/Qkr0cH'><font color="#FC7B13">read more here!</font></a>
-<b>DLC Patch Notes:</b><a href='event:bit.ly/1lWgt55'>
-<font color="#FC7B13">Patch notes ( Dec 12 )</font></a><br>
-<b>Follow Us On Twitter:</b>
+<version> v1.1.25536<news>Linux公測版：
+<a href='event:bit.ly/Qkr0cH'><font color="#FC7B13">詳情請參見內文！</font></a>
+附加下載內容更新紀錄：<a href='event:bit.ly/1lWgt55'>
+<font color="#FC7B13">更新紀錄（12月）</font></a><br>
+關注我們的Twitter：
 <a href='event:bit.ly/1oUA0VQ'><font color="#FC7B13">@Ockeffs</font></a>
 <a href='event:bit.ly/QeqInN'><font color="#FC7B13">@Arminposts</font></a>
 <a href='event:bit.ly/1esQMqJ'><font color="#FC7B13">@AntonWestbergh</font></a>
 <a href='event:bit.ly/1gSpdkQ'><font color="#FC7B13">@markus_rannare</font></a>
 <a href='event:bit.ly/1hrfRSi'><font color="#FC7B13">@paul_yance</font></a>
 <a href='event:bit.ly/1i9uCso'><font color="#FC7B13">@Liinelol</font></a><br>
-<b>Best
-Coffee Stain  Studios</b>
+Coffee Stain Studios敬啟
