--- a/sanctum2trial.news/index.html
+++ b/sanctum2trial.news/index.html
@@ -1,16 +1,15 @@
-<newsid>
+﻿<newsid>
 v1
 <version>
 v1.1.25536<news>
-<font color="#FC7B13">Welcome</font> to the Demo version of Sanctum 2.
+<font color="#FC7B13">歡迎試玩</font>幽閉聖地2。
 
-<b>Full version features.. </b>
-* 4-Player Online Co-op
-* Loads of Towers
-* Loads of Weapons
-* 16 Diverse Levels
+<b>完整版遊戲內容：</b>
+* 4人線上合作
+* 多種類的炮塔
+* 多種類的武器
+* 16張各式各樣的地圖
 
-Long term support from devoted developers. 
+開發人員熱情投入的長期支援。
 
-Best
-Coffee Stain Studios
+Coffee Stain Studios敬啟
